erDiagram
    %% TownHelp Database Schema - Entity Relationship Diagram
    %% Version 1.0.0 - 2026-03-22
    %% 16 Tables - 14 Enums - 13 Indexes

    users ||--o| provider_profiles : "extends to"
    users ||--o{ bookings : "requests"
    users ||--o{ messages : "sends"
    users ||--o{ notifications : "receives"
    users ||--o{ reviews : "writes"
    users ||--o{ reports : "files"
    users ||--o{ favorites : "saves"

    provider_profiles ||--o{ bookings : "fulfills"
    provider_profiles ||--o{ provider_services : "offers"
    provider_profiles ||--o{ service_areas : "covers"
    provider_profiles ||--o{ provider_photos : "showcases"
    provider_profiles ||--o{ favorites : "saved by"

    service_categories ||--o{ provider_services : "categorizes"
    service_categories ||--o{ bookings : "booked for"

    bookings ||--|| conversations : "opens"
    bookings ||--o| reviews : "reviewed via"
    bookings ||--o{ booking_status_logs : "tracked by"
    bookings ||--o| payments : "paid via"
    bookings ||--o| disputes : "disputed via"

    conversations ||--o{ messages : "contains"

    users {
        uuid id PK
        varchar phone UK
        varchar whatsapp_number
        varchar email UK
        varchar full_name
        text avatar_url
        enum auth_provider
        enum preferred_language
        int failed_login_attempts
        timestamp locked_until
        jsonb metadata
        boolean is_active
        boolean is_phone_verified
        boolean is_email_verified
        timestamp last_login_at
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    provider_profiles {
        uuid id PK
        uuid user_id FK
        varchar display_name
        text bio
        decimal base_rate
        enum rate_type
        decimal rating_avg
        int rating_sum
        int rating_count
        int completed_bookings
        boolean is_verified
        boolean is_available
        time available_from
        time available_to
        boolean is_background_checked
        jsonb documents
        float latitude
        float longitude
        int max_travel_radius_km
        timestamp verified_at
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    service_categories {
        uuid id PK
        varchar name UK
        varchar slug UK
        text description
        varchar icon_name
        boolean is_active
        int sort_order
        timestamp created_at
    }

    provider_services {
        uuid id PK
        uuid provider_id FK
        uuid category_id FK
        decimal custom_rate
        enum rate_type
        text description
        int experience_years
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    service_areas {
        uuid id PK
        uuid provider_id FK
        varchar area_name
        varchar city
        varchar state
        varchar pincode
        float latitude
        float longitude
        float radius_km
        boolean is_primary
        timestamp created_at
    }

    provider_photos {
        uuid id PK
        uuid provider_id FK
        text url
        varchar caption
        int sort_order
        timestamp created_at
    }

    bookings {
        uuid id PK
        varchar booking_number UK
        uuid requester_id FK
        uuid provider_id FK
        uuid category_id FK
        enum status
        timestamp scheduled_start
        timestamp scheduled_end
        varchar service_address
        varchar service_pincode
        float service_lat
        float service_lng
        text requester_notes
        text provider_notes
        decimal quoted_rate
        decimal final_amount
        timestamp confirmed_at
        timestamp started_at
        timestamp completed_at
        timestamp cancelled_at
        timestamp created_at
        timestamp updated_at
    }

    booking_status_logs {
        uuid id PK
        uuid booking_id FK
        enum from_status
        enum to_status
        uuid changed_by FK
        text notes
        timestamp created_at
    }

    conversations {
        uuid id PK
        uuid booking_id FK
        uuid requester_id FK
        uuid provider_id FK
        timestamp last_message_at
        timestamp created_at
    }

    messages {
        uuid id PK
        uuid conversation_id FK
        uuid sender_id FK
        enum message_type
        text content
        jsonb metadata
        boolean is_read
        boolean is_flagged
        text flagged_reason
        timestamp read_at
        timestamp created_at
    }

    reviews {
        uuid id PK
        uuid booking_id FK
        uuid reviewer_id FK
        uuid reviewee_id FK
        int rating
        text comment
        boolean is_visible
        text admin_notes
        timestamp created_at
        timestamp updated_at
    }

    disputes {
        uuid id PK
        uuid booking_id FK
        uuid raised_by FK
        enum reason
        text description
        enum status
        text resolution_notes
        uuid resolved_by FK
        timestamp resolved_at
        timestamp created_at
        timestamp updated_at
    }

    reports {
        uuid id PK
        uuid reporter_id FK
        uuid reported_user_id FK
        uuid booking_id FK
        enum reason
        text description
        enum status
        text admin_notes
        uuid resolved_by
        timestamp resolved_at
        timestamp created_at
    }

    payments {
        uuid id PK
        uuid booking_id FK
        varchar idempotency_key UK
        decimal amount
        enum currency
        enum payment_method
        enum status
        varchar upi_id
        varchar external_txn_id
        jsonb gateway_response
        timestamp paid_at
        timestamp refunded_at
        timestamp created_at
    }

    notifications {
        uuid id PK
        uuid user_id FK
        enum channel
        enum type
        varchar title
        text body
        jsonb data
        boolean is_read
        timestamp read_at
        timestamp created_at
    }

    favorites {
        uuid id PK
        uuid user_id FK
        uuid provider_id FK
        timestamp created_at
    }
